@@ -14,6 +14,7 @@ Version 1.2
   - 32-bit with 32, 64 threads
   - 64-bit with 32, 64 threads
   - 128-bit with 32, 64 threads
+* Mark6Gatherer gets module serial number for mark6 activity message
 
 Version 1.1
 ~~~~~~~~~~~
